objects/USA_Homepage_KPI__c.object
<CustomObject>
    <fields>
        <fullName>USA_Background_Color_Value__c</fullName>
        <description>Background color of the Homepage KPI tile.</description>
        <formula>Case(USA_Status__c, 
1, &quot;37BF3C&quot;, 
2, &quot;F9CB36&quot;, 
3, &quot;D94343&quot;, 
&quot;264B82&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background Color Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Good_Through__c</fullName>
        <description>The date this KPI is good through</description>
        <inlineHelpText>The date this KPI is good through</inlineHelpText>
        <label>Good Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_KPI_Format__c</fullName>
        <label>KPI Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_KPI_Type__c</fullName>
        <label>KPI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Label__c</fullName>
        <description>The label for this KPI</description>
        <inlineHelpText>The label for this KPI</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Last_Period__c</fullName>
        <description>The value of this KPI in the last period</description>
        <inlineHelpText>The value of this KPI in the last period</inlineHelpText>
        <label>Last Period</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>USA_Numeric_Value__c</fullName>
        <label>Numeric Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Position__c</fullName>
        <label>Position</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Status__c</fullName>
        <description>Describe the status of this KPI (1-3)</description>
        <inlineHelpText>Describe the status of this KPI (1-3)</inlineHelpText>
        <label>Status</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Sub_Position__c</fullName>
        <label>Sub Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Text_Color_Value__c</fullName>
        <description>Text Hex Color Value</description>
        <formula>&quot;E9F2E9&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Color Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Value__c</fullName>
        <description>The value for this KPI</description>
        <label>Value</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <label>Homepage KPI</label>
    <nameField>
        <label>Homepage KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>